--- a/CSS/components/banner.css
+++ b/CSS/components/banner.css
@@ -1,5 +1,5 @@
 .banner {
-	background-image: url(mages/background1.jpg);
+	background-image: url(images/background1.jpg);
     color: white; 
     padding: 150px 0px;
     background-size: cover;
